=======================================================
network-manager-applet-1.8.22
Overview of changes since network-manager-applet-1.8.20
=======================================================

* The applet's secret agent can now utilize external UI mode for VPN plugins
  that support it.
* The Wi-Fi-related items in the applet menu are now sorted more reasonably.
* Various improvements to the Mobile Wizard and Certificate Chooser
  usability.
* Render a QR code in the applet's connection info dialog.
* Improved the applet's info dialog appearance.
* Updated translations.

=======================================================
network-manager-applet-1.8.20
Overview of changes since network-manager-applet-1.8.18
=======================================================

* Build of libnm-gtk, a libnm-glib compatibility library, is disabled by
  default. It can be enabled by passing --with-libnm-gtk to configure
  script. Nobody should need it by now. Users that still use this are
  encouraged to let us know before the libnm-glib support is removed for good.
* Improve the mobile broadband wizard (issue#15).
* Fix a bug in the wifi dialog that made widgets disappear when
  selecting a different device (rh#1665653).
* Support secret agent hints needed when using IWD as wireless
  backend.
* Update Brazilian Portuguese, Catalan, Croatian, Czech, Danish,
  French, Lithuanian, Polish, Russian, Slovak and Turkish
  translations.

=======================================================
network-manager-applet-1.8.18
Overview of changes since network-manager-applet-1.8.16
=======================================================

* libnma: fix wrongly showing hidden GUI elements, which
  causes connection editing to behave wrong (issue#20).
* libnma, c-e: fix translation issues in GUI due to missing
  gettext domain (bgo#792285).
* Update Croatian, German, Indonesian, Italian, Kazakh, and Turkish
  translations.

=======================================================