@@ -597,7 +597,7 @@ constructor (GType type, guint n_construct_properties, GObjectConstructParam *co
 			flags |= g_value_get_uint (construct_properties[i].value);
 	}
 	priv->vtable = &nma_cert_chooser_vtable_file;
-#if LIBNM_BUILD && WITH_GCR
+#if LIBNM_BUILD && (GTK_CHECK_VERSION(3,90,0) ? WITH_GCR_GTK4 : WITH_GCR)
 	if ((flags & NMA_CERT_CHOOSER_FLAG_PEM) == 0)
 		priv->vtable = &nma_cert_chooser_vtable_pkcs11;
 #endif
